feat: update app to include name customization, hints in quiz, and Google Analytics integration

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
-    <title>Las Tablas de Julio</title>
+    <title>Las Tablas de Multiplicar</title>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-11F5ES994E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-11F5ES994E');
+    </script>
   </head>
   <body>
     <div id="root"></div>
